Add campaign statistics endpoint
 - PRO-1634
